# casey-eval

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
db/: schema.sql
db/migrations/: 001_initial.sql  002_users.sql
docs/: AGENT_EVALUATION_FRAMEWORK.md
eval/: __init__.py  cli.py  database.py  prompt_loader.py  prompt_parser.py  rules.py  runner.py
eval/judges/: __init__.py  base.py  behavioral.py  completeness.py  prompts.py  quality.py  safety.py
eval/metrics/: __init__.py
eval/personas/: __init__.py  distributions.py  edge_cases.py  generator.py  models.py
eval/simulation/: __init__.py  client.py  conversation.py
scripts/: create_user.py  migrate_data.py  run_batch.py  run_conversation.py  run_judges.py  test_sdk.py
webapp/: app.py  auth.py  db.py  run_tracker.py  utils.py
webapp/templates/: base.html  conversation.html  index.html  prompt_clone.html  prompt_detail.html  prompts.html  runs.html  version.html
webapp/templates/auth/: login.html
